tests/ui/did_you_mean/issue-54109-and_instead_of_ampersands.stderr
error: `and` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:7:15
   |
LL |     let _ = a and b;
   |               ^^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `&&` to perform logical conjunction
   |
LL -     let _ = a and b;
LL +     let _ = a && b;
   |

error: `and` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:9:10
   |
LL |     if a and b {
   |          ^^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `&&` to perform logical conjunction
   |
LL -     if a and b {
LL +     if a && b {
   |

error: `or` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:20:15
   |
LL |     let _ = a or b;
   |               ^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `||` to perform logical disjunction
   |
LL -     let _ = a or b;
LL +     let _ = a || b;
   |

error: `or` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:22:10
   |
LL |     if a or b {
   |          ^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `||` to perform logical disjunction
   |
LL -     if a or b {
LL +     if a || b {
   |

error: `and` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:30:11
   |
LL |     if (a and b) {
   |           ^^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `&&` to perform logical conjunction
   |
LL -     if (a and b) {
LL +     if (a && b) {
   |

error: `or` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:38:11
   |
LL |     if (a or b) {
   |           ^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `||` to perform logical disjunction
   |
LL -     if (a or b) {
LL +     if (a || b) {
   |

error: `and` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:46:13
   |
LL |     while a and b {
   |             ^^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `&&` to perform logical conjunction
   |
LL -     while a and b {
LL +     while a && b {
   |

error: `or` is not a logical operator
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:54:13
   |
LL |     while a or b {
   |             ^^
   |
   = note: unlike in e.g., Python and PHP, `&&` and `||` are used for logical operators
help: use `||` to perform logical disjunction
   |
LL -     while a or b {
LL +     while a || b {
   |

error[E0308]: mismatched types
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:13:33
   |
LL |     let _recovery_witness: () = 0;
   |                            --   ^ expected `()`, found integer
   |                            |
   |                            expected due to this

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
